--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ on:
       - 'package.json'
       - 'sidebars.ts'
       - 'specs/**'
+  workflow_dispatch:
 
 env:
    AZURE_WEBAPP_NAME: uliapidocs 
